# hotline

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  hotfield_test.py  hotline.py  install.bat  install.sh  pyproject.toml  run.py  run_tests.py  setup.py  test_paint_anim.py
examples/: mayahotline.py  winhotline.py
hotline/: __init__.py  __main__.py  anim.py  api.py  app.py  command.py  config.py  constant.py  context.py  core.py  events.py  help.py  highlighter.py  history.py  hotfield.py  hotline.py  messages.py  mode.py  qt.py  renamer.py  settings.py  shout.py  store.py  ui.py  utils.py  views.py  widgets.py
hotline/conf/: Python.yaml  config.json  defaults.json  defaults.yaml
hotline/contexts/: __init__.py  bare.py  basiccontext.py  context.py  linux.py  mac.py  maya.py  mayacontext.py  mayactx.py  nuke.py  win.py  winctx.py  windows.py
hotline/settings/defaults/: Python.syntax  color.hotline-settings  color.settings  key.hotline-settings  key.settings  sandbox.py  style.css
hotline/settings/user/: store.settings
hotline/styles/: __init__.py  dark.css  light.css  maya.css
hotline/tests/: __main__.py  test_renamer.py
hotline/ui/: __init__.py  highlighter.py  mayaui.py  resource.py  style.css  ui.py
tests/: show_basic_context.py  show_ui.py  test_api.py  test_config.py  test_context.py  test_modes.py  test_store.py  test_ui.py  test_utils.py
ui_resources/: resource.qrc
