[tool.poetry]
name = "hotline"
version = "0.7.3"
description = "Sublime text like Qt Command Palette"
authors = ["Dan Bradham <danielbradham@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
PySide2 = "^5.14.2"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
